# Burnout_Detection_system

./: .env.example  .gitignore  BUILD_COMPLETE_SUMMARY.md  CLEANUP_SUMMARY.md  DEPLOYMENT_ENV.md  PRODUCTION_READY.md  PROJECT_READY.md  QUICK_START.md  README.md  SETUP_GUIDE.md  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml
app/: globals.css  layout.tsx  page.tsx
app/(auth)/login/: page.tsx
app/(auth)/register/: page.tsx
app/(dashboard)/: layout.tsx
app/(dashboard)/admin/: page.tsx
app/(dashboard)/analytics/: page.tsx
app/(dashboard)/dashboard/: page.tsx
app/(dashboard)/settings/: page.tsx
app/contexts/: AuthContext.tsx  SyncContext.tsx
app/lib/: api.ts  backend.ts  proxy.ts
components/dashboard/: SyncStatusIndicator.tsx
desktop-agent/: .env.example  pyproject.toml
desktop-agent/src/: app_tracker.py  collector.py  main.py  system_monitor.py  uploader.py
desktop-app/: main.js  package.json
desktop-app/src/: activity-collector.js  python-monitor.js
hooks/: useActivityCollector.ts  useLocalData.ts  useOfflineSync.ts  useRestNotifications.ts
lib/: indexedDB.ts  syncManager.ts  utils.ts
ml-service/: .env.example  Dockerfile  pyproject.toml  requirements.txt
ml-service/src/: advanced_ml.py  database.py  main.py  scheduler.py  scoring.py
ml-service/src/routes/: analytics.py  health.py  scoring.py
public/: manifest.json  offline.html  sw.js
server/: .env.example  Dockerfile  package-lock.json  package.json
server/src/: index.ts
server/src/config/: database.ts
(+37 files in other folders)
