[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "burnout-detector-agent"
version = "0.1.0"
description = "Desktop agent for real-time burnout detection and OS-level monitoring"
requires-python = ">=3.9"
dependencies = [
    "requests==2.31.0",
    "psutil==5.9.6",
    "pynput==1.7.6",
    "apscheduler==3.10.4",
    "python-dotenv==1.0.0",
    "pydantic==2.5.0",
    "pyinstaller==6.1.0",
]

[project.scripts]
burnout-agent = "src.main:run"
